cart: Add routes to delete/update cart items, use more RESTful naming
